Responsive design for carousel

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -30,6 +30,15 @@ a{
 		font-size: 14px;
 	}
 
+	#slider {
+		width : 0%;
+		display: none;
+	}
+
+	#accordion {
+		width : 100%;
+	}
+
 }
 
 .header-line{
